# challenges

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  RECON.md  SOLUTION.md  buried_treasure  comprehensive_ctf_log_educational.txt  config.json  demo.sh  deploy.sh  docker-compose.yml  ecosystem.config.cjs  exploit.py  extract_map.py  index.html  install.sh  layer_final.elf  not_quite_optimal  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  solve.py  solve_buried_treasure.py  tsconfig.base.json  vite.config.js  writeup.md
app/: README.md  index.html  package-lock.json  package.json
chal/: solve.py
ctf/: solve.py  solve_stage1.py
docs/: architecture.md
focusflow/: index.html  package-lock.json  package.json
ing-site/: desvio_numero.json  index.html  ing-login.html  vercel.json
neurova/: __init__.py
obfpyscated/: Dockerfile  meow.py  payload1.dis  payload1.marshal  payload2.dis  payload2.marshal  run.sh  stage1.py  stage2.enc
prisma/: schema.prisma  seed.ts
smurf/: README.md  __init__.py  install.sh  main.py
smurf-pbx/: README.md  cloudflared-tunnel.sh  install.sh  run_e2e_tests.sh
smurf_bank/: .gitignore  README.md  app.py  create_admin.py  init_db.py  requirements.txt
smurf_pbx/: README.md  db_init.py  install.sh  smurf.db  smurf_core.py  smurf_rtp.py  smurf_sip.py  smurf_web.py  smurf_webrtc.py
smurfx/: .env  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  install.sh  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
src/: App.jsx  (+2 more)
(+384 files in other folders)
