[package]
name = "neurova"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[dependencies]
axum = { version = "=0.8.6", features = ["macros", "ws", "json"] }
futures = "=0.3.31"
rand = "=0.8.5"
rusqlite = { version = "=0.31.0", features = ["bundled"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
sha2 = "=0.10.8"
tokio = { version = "=1.44.2", features = ["full"] }
tokio-stream = "=0.1.17"
tower-http = { version = "=0.6.6", features = ["cors", "trace", "fs"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter", "fmt", "json"] }
uuid = { version = "=1.11.0", features = ["v4", "serde"] }
